# PoetryProject

./: pyproject.toml
.github/workflows/: python-tests.yml
muj_projekt/src/muj_projekt/: main.py
muj_projekt/src/muj_projekt/application/: application.py
src/: main.py
src/application/: application.py
tests/: test_application.py
