[project]
name = "PoetryProject"
version = "0.1.0"
description = ""
authors = [
    {name = "koreneklukas",email = "70533829+koreneklukas@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pytest (>=8.4.0,<9.0.0)"
]

#[tool.poetry]
#packages = [{include = "muj_projekt", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
